syntax = "proto3";

message ProtoBlock {
    int64 Index = 1;
    bytes BlockData = 2;
    bytes Hash = 3;
    bytes PreviousHash = 4;
    bytes Signature = 5;
    int64 TimeStamp = 6;
}